--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-particles-js": "^3.4.0",
-    "react-scripts": "3.4.4",
+    "react-scripts": "3.1.2",
     "react-tilt": "^0.1.4",
     "tachyons": "^4.12.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
