--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "facerecognitionbrain",
+  "name": "facerecognitionbrainn",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,8 +12,9 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-particles-js": "^3.4.0",
-    "react-scripts": "3.4.4",
+    "react-scripts": "3.2.1",
     "react-tilt": "^0.1.4",
+    "serve": "^11.3.2",
     "tachyons": "^4.12.0"
   },
   "scripts": {
